--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -8,8 +8,8 @@ spring.datasource.url=jdbc:mysql://localhost:3306/codingnomads?useSSL=false&allo
 
 # Please create environment variables for the following two keys and their relevant values.
 # This can be done within IntelliJ run configurations, or at the operating system level.
-spring.datasource.username=${root}
-spring.datasource.password=${Connis123???}
+spring.datasource.username=root
+spring.datasource.password=Connis123???
 # You can also hard-code the values, but be sure not to push them to GitHub!
 
 # The SQL dialect makes Hibernate generate better SQL for the chosen database
@@ -42,7 +42,7 @@ database.values={url:'http://127.0.0.1:3306/', db:'codingnomads', username:'codi
 #spring.cache.redis.cache-null-values=true
 
 #### Spring Profiles
-spring.profiles.active=understanding_and_using_profiles
+####spring.profiles.active=understanding_and_using_profiles,test
 
 #### OAuth 2.0 Client
 spring.security.oauth2.client.registration.google.client-id=670141908453-b3nlnt37a7dev8sm72rcpttau897houc.apps.googleusercontent.com
